--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 3700
 
-DB_SERVICE = mongodb
+DB_SERVICE= mongodb
 DB_HOST= 127.0.0.1
 DB_PORT= 27017
-DB_NAME= Proyect-COPEREX 
+DB_NAME= Proyect_COPEREX
 
-SECRET_KEY=Holamundo
+SECRET_KEY=HolaMundo
 
