--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -24,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "proyect-coperex": "file:"
   },
   "type": "module"
 }
